_sass/_menu.scss
/* 加載csshover3.htc，解決IE6沒有li:hover擬類的問題 */
* html body {
  behavior: url("csshover3.htc");
}
/* 修正IE7絕對定位差異 */
*:first-child+html #menu ul li ul {
  margin-top: 0;
  li ul {
    margin-top: -40px;
  }
}
* html #menu ul {
  /* 解決IE6不理overflow問題，直接指定高度 */
  min-height: 40px;
  /* 解決IE6條列式餘白問題*/
  li {
    display: inline;
    /* 修正IE6絕對定位差異 */
    ul {
      margin-top: 0;
    }
  }
}
/* ---------- 大小與定位 ---------- */
#menu {
  /* 選單大小 */
  width: 100%;
  min-height: 40px;
  margin-top: 7px;
  ul {
    /* 取消ul樣式符號 */
    list-style-type: none;
    /* 重設ul邊界與留白為零 */
    margin: 0;
    padding: 0;
    /* 內有浮動元件時，需設overflow才會自動調整大小 */
    overflow: auto;
    li {
      @media (max-width: 768px) {
        &:nth-child(even) ul li ul {
          left: -192px * 2;
        }
      }
      /* 利用float讓第一層li水平排列 */
      float: left;
      a {
        /* 將a改為區塊元件，以便指定寬高 */
        display: block;
        /* 這邊也要設float，否則IE6會以100%寬度顯示 */
        float: left;
        /* 固定高度 */
        height: 40px;
        width: 192px;
        text-align: center;
      }
      ul {
        /* 讓第二層ul跳脫文件流以利定位 */
        position: absolute;
        /* 固定寬度 */
        width: 192px;
        /* 避免出現捲軸 */
        overflow: visible;
        /* 讓ul與母階層li相同位置 */
        clear: left;
        margin-top: 40px;
        margin-right: 0;
        margin-bottom: 0;
        margin-left: 0;
        li {
          /* 覆寫繼承自第一層的浮動設定 */
          float: none;
          text-align: center;
          a {
            /* 覆寫繼承自第一層的浮動設定 */
            float: none;
            width: 100%;/* 註：display、height、padding繼承第一層的設定 */
          }
          ul {
            margin-top: -40px;
            margin-right: 0;
            margin-bottom: 0;
            margin-left: 192px;
            width: 100%;
            li {
              /* width、float繼承第二層，免設定 */
              a {
                /* width、float繼承第二層，免設定 */
              }
            }
          }
        }
      }
    }
  }
}
/* ---------- 隱藏與顯示階層 ---------- */
#menu ul li {
  &:hover ul {
    /* 觸動第一層時，顯示第二層 */
    visibility: visible;
    li ul {
      /* 顯示第二層時，隱藏第三層，避免同時彈出 */
      visibility: hidden;
    }
  }
  ul {
    /* 預先隱藏第二層 */
    visibility: hidden;
    li {
      &:hover ul {
        /* 觸動第二層時，顯示第三層 */
        visibility: visible;
        li ul {
          /* 顯示第三層時，隱藏第四層，避免同時彈出 */
          visibility: hidden;
        }
      }
      ul li:hover ul {
        /* 觸動第三層時，顯示第四層 */
        visibility: visible;
      }
    }
  }
}

/* ---------- 以下為美化用，非必需 ---------- */

/* 預設字體 */
#menu {
  font-size: 26px;
  font-family: Arial, Helvetica, sans-serif;
  /* 第一層ul背景色彩與邊框 */
  ul {
    background: #30a7de;
    /* 第一層a字型 */
    li {
      a {
        color: #FFF;
        text-decoration: none;
        line-height: 40px;
        /* 觸動第一層li時，改變背景色 */
        &:hover {
          background: #efefef;
        }
      }
      /*第二層ul背景色彩與邊框  */
      ul {
        background: #efefef;
        /* 第二層a字型 */
        li {
          a {
            font-size: 26px;
            color: #30a7de;
            text-decoration: none;
            /* 觸動第二層以上li時改變背景色 */
            &:hover {
              background: #dfdfdf;
            }
          }
          /* 觸動第二層以上li時改變背景色 */
          &:hover {
            background: #dfdfdf;
          }
        }
      }
      /* 觸動第一層li時，改變背景色 */
      &:hover {
        background: #efefef;
        a {
          color: #30a7de;
        }
      }
    }
  }
}

.tl_page {
  *:not(#menu) {
    z-index: -1;
  }
  #menu * {
    z-index: 999;
  }
  .tl_main_head * {
    z-index: 1 !important;
  }
}
.row * {
  z-index: 1 !important;
}

